--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   ],
   "license": "UNLICENSED",
   "scripts": {
-    "build": "browserify javascripts/main.js -o javascript-challenge.js -t [ babelify --presets [ es2015 ] ]"
+    "build": "npm run build:js && npm run build:scss",
+    "build:js": "browserify javascripts/main.js -o javascript-challenge.js -t [ babelify --presets [ es2015 ] ]",
+    "build:scss": "node-sass --include-path styles styles/_.scss javascript-challenge.css",
+    "watch": "nodemon -e js,scss -i javascript-challenge.js -x 'npm run build'",
+    "help": "nodemon -h"
   },
+
   "devDependencies": {
     "babel-cli": "^6.10.1",
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
+    "node-sass": "^3.7.0",
+    "nodemon": "^1.10.0"
   }
 }
