--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     }
   ],
   "license": "UNLICENSED",
+  "engines": {
+    "node": ">=v14.17.3"
+  },
   "scripts": {
     "build": "npm run build:js && npm run build:scss",
     "build:js": "browserify javascripts/main.js -o javascript-challenge.js -t [ babelify --presets [ @babel/preset-env ] ]",
